--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-
-# Created by https://www.gitignore.io/api/vue,node,sass,macos,sublimetext
-# Edit at https://www.gitignore.io/?templates=vue,node,sass,macos,sublimetext
-
 ### macOS ###
 # General
 .DS_Store
@@ -29,6 +25,10 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+### Next ###
+/.next/
+/out/
 
 ### Node ###
 # Logs
@@ -108,8 +108,17 @@ typings/
 # nuxt.js build output
 .nuxt
 
-# react / gatsby
-public/
+# rollup.js default build output
+dist/
+
+# Uncomment the public line if your project uses Gatsby
+# https://nextjs.org/blog/next-9-1#public-directory-support
+# https://create-react-app.dev/docs/using-the-public-folder/#docsNav
+# public
+
+# Storybook build outputs
+.out
+.storybook-out
 
 # vuepress build output
 .vuepress/dist
@@ -123,11 +132,22 @@ public/
 # DynamoDB Local files
 .dynamodb/
 
-### Sass ###
-.sass-cache/
-*.css.map
-*.sass.map
-*.scss.map
+# Temporary folders
+tmp/
+temp/
+
+### react ###
+.DS_*
+**/*.backup.*
+**/*.back.*
+
+node_modules
+
+*.sublime*
+
+psd
+thumb
+sketch
 
 ### SublimeText ###
 # Cache files for Sublime Text
@@ -160,19 +180,3 @@ bh_unicode_properties.cache
 # Sublime-github package stores a github token in this file
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
-
-### Vue ###
-.DS_*
-**/*.backup.*
-**/*.back.*
-
-node_modules
-bower_componets
-
-*.sublime*
-
-psd
-thumb
-sketch
-
-# End of https://www.gitignore.io/api/vue,node,sass,macos,sublimetext
