--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/robinwakeman/under-the-weather#readme",
   "dependencies": {
     "@material-ui/core": "^4.8.1",
+    "@material-ui/icons": "^4.5.1",
     "babel-plugin-root-import": "^6.4.1",
     "next": "^9.1.6",
     "react": "^16.12.0",
