--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "homepage": "https://github.com/robinwakeman/under-the-weather#readme",
   "dependencies": {
-    "@material-ui/core": "^4.8.1",
+    "@material-ui/core": "4.8.0",
     "@material-ui/icons": "^4.5.1",
+    "apexcharts": "^3.12.0",
     "babel-plugin-root-import": "^6.4.1",
     "next": "^9.1.6",
     "react": "^16.12.0",
