--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/robinwakeman/under-the-weather#readme",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "4.8.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "apexcharts": "^3.12.0",
     "babel-plugin-root-import": "^6.4.1",
+    "date-fns": "^2.0.0-beta.5",
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
