reorganized into frontend and backend directories

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "under-the-weather",
+  "name": "under-the-weather-frontend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
