--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,21 @@
   "name": "under-the-weather-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
+    "start": "env-cmd -f ./.env nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Robin Wakeman",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "env-cmd": "^10.0.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.5",
+    "nodemon": "^2.0.2",
+    "validator": "^12.1.0"
+  }
 }
