--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "apexcharts": "^3.12.0",
     "babel-plugin-root-import": "^6.4.1",
     "date-fns": "^2.0.0-beta.5",
+    "fast-deep-equal": "^3.1.1",
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
