--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "next": "^9.1.6",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "reactn": "^2.2.4"
   }
 }
