--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^2.0.0-beta.5",
     "fast-deep-equal": "^3.1.1",
     "next": "^9.1.6",
+    "next-cookies": "^2.0.3",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
     "react-dom": "^16.12.0",
