--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
+    "@zeit/next-css": "^1.0.1",
     "apexcharts": "^3.12.0",
     "babel-plugin-root-import": "^6.4.1",
     "date-fns": "^2.0.0-beta.5",
@@ -33,6 +34,7 @@
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
     "react-dom": "^16.12.0",
+    "react-spring": "^8.0.27",
     "reactn": "^2.2.4"
   }
 }
