--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "fast-deep-equal": "^3.1.1",
     "next": "^9.1.6",
     "next-cookies": "^2.0.3",
+    "next-ga": "^2.3.4",
     "react": "^16.12.0",
     "react-apexcharts": "^1.3.6",
     "react-dom": "^16.12.0",
